src/components/layout.css
/* ... */
#stepCard3:hover {
  transform: scale(1.05)
}

/* ----------BEGIN HUBSPOT APPLY NOW FORM STYLING----------- */
#hsForm_c7688725-624e-435c-8add-8409a327eecb {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#hsForm_cf53efdd-75c1-4db4-bfb8-563885cc7680 {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.hs_email {
  margin-bottom: 1rem;
  text-align: center;
}

.hs-field-desc {
  text-align: center;
  font-size: .75rem;
  font-style: italic;
}

.hs-richtext > p {
  text-align: center;
  font-size: .75rem;
  font-style: italic;
}

/* ebook input */
#email-c7688725-624e-435c-8add-8409a327eecb {
  border: 2px solid #9d1996;
  border-radius: .25rem;
  padding: .75rem;
  width: 20rem;
}

#email-cf53efdd-75c1-4db4-bfb8-563885cc7680 {
  border: 2px solid #9d1996;
  border-radius: .25rem;
  padding: .75rem;
  width: 20rem;
  margin-bottom: 1rem;
}

/* SEND ME THE GUIDE BUTTON */
#leadCaptureSubmitBtn {
  background-color: #9d1996;
  border-radius: 9999px;
  padding: .75rem;
  color: white;
  font-family: 'Roboto Condensed', sans-serif;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
  width: 12rem;
}

#leadCaptureSubmitBtn:hover {
  cursor: pointer;
}

/* APPLY NOW BUTTON */
.loanAppSubmitBtn {
  background-color: #9d1996;
  border-radius: 9999px;
  padding: .75rem;
  color: white;
  font-family: 'Roboto Condensed', sans-serif;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)
}

.loanAppSubmitBtn:hover {
  cursor: pointer;
}

.applyNowInput {
  border: 2px solid #9d1996;
  border-radius: .25rem;
  padding: .75rem;
  width: 20rem;
  margin-bottom: 1rem;
}

#loanAppSubmitBtn {
  background-color: #9d1996;
  border-radius: 9999px;
  padding: .75rem;
  color: white;
  font-family: 'Roboto Condensed', sans-serif;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05)
}

#loanAppSubmitBtn:hover {
  cursor: pointer;
}

/* -----------END HUBSPOT APPLY NOW FORM STYLING------------ */

html {
  font-family: 'Roboto Condensed', sans-serif;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
}
body {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
  display: block;
}
audio,
canvas,
progress,
video {
  display: inline-block;
}
audio:not([controls]) {
  display: none;
  height: 0;
}
progress {
  vertical-align: baseline;
}
[hidden],
template {
  display: none;
}
a {
  background-color: transparent;
  -webkit-text-decoration-skip: objects;
}
a:active,
a:hover {
  outline-width: 0;
}
abbr[title] {
  border-bottom: none;
  text-decoration: underline;
  text-decoration: underline dotted;
}
b,
strong {
  font-weight: inherit;
  font-weight: bolder;
}
dfn {
  font-style: italic;
}
h1 {
  font-size: 2em;
  margin: 0.67em 0;
}
mark {
  background-color: #ff0;
  color: #000;
}
small {
  font-size: 80%;
}
sub,
sup {
  font-size: 75%;
  line-height: 0;
  position: relative;
  vertical-align: baseline;
}
sub {
  bottom: -0.25em;
}
sup {
  top: -0.5em;
}
img {
  border-style: none;
}
svg:not(:root) {
  overflow: hidden;
}
code,
kbd,
pre,
samp {
  font-size: 1em;
}
figure {
  margin: 1em 40px;
}
hr {
  box-sizing: content-box;
  height: 0;
  overflow: visible;
}
button,
input,
optgroup,
select,
textarea {
  font: inherit;
  margin: 0;
}
optgroup {
  font-weight: 700;
}
button,
input {
  overflow: visible;
}
button,
select {
  text-transform: none;
}
[type="reset"],
[type="submit"],
button,
html [type="button"] {
  -webkit-appearance: button;
}
[type="button"]::-moz-focus-inner,
[type="reset"]::-moz-focus-inner,
[type="submit"]::-moz-focus-inner,
button::-moz-focus-inner {
  border-style: none;
  padding: 0;
}
[type="button"]:-moz-focusring,
[type="reset"]:-moz-focusring,
[type="submit"]:-moz-focusring,
button:-moz-focusring {
  outline: 1px dotted ButtonText;
}
fieldset {
  border: 1px solid silver;
  margin: 0 2px;
  padding: 0.35em 0.625em 0.75em;
}
legend {
  box-sizing: border-box;
  color: inherit;
  display: table;
  max-width: 100%;
  padding: 0;
  white-space: normal;
}
textarea {
  overflow: auto;
}
[type="checkbox"],
[type="radio"] {
  box-sizing: border-box;
  padding: 0;
}
[type="number"]::-webkit-inner-spin-button,
[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
[type="search"] {
  -webkit-appearance: textfield;
  outline-offset: -2px;
}
[type="search"]::-webkit-search-cancel-button,
[type="search"]::-webkit-search-decoration {
  -webkit-appearance: none;
}
::-webkit-input-placeholder {
  color: inherit;
  opacity: 0.54;
}
::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}
html {
  font: 112.5%/1.45em 'Roboto Condensed', sans-serif;
  box-sizing: border-box;
  overflow-y: scroll;
}
* {
  box-sizing: inherit;
}
*:before {
  box-sizing: inherit;
}
*:after {
  box-sizing: inherit;
}
body {
  color: hsla(0, 0%, 0%, 0.8);
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: normal;
  word-wrap: break-word;
  font-kerning: normal;
  -moz-font-feature-settings: "kern", "liga", "clig", "calt";
  -ms-font-feature-settings: "kern", "liga", "clig", "calt";
  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
  font-feature-settings: "kern", "liga", "clig", "calt";
}
img {
  max-width: 100%;
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
}
h1 {
  margin-left: 0;
  margin-right: 0;
  margin-top: 0;
  padding-bottom: 0;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  margin-bottom: 1.45rem;
  color: inherit;
  font-family: 'Roboto Condensed', sans-serif;
  font-weight: bold;
  text-rendering: optimizeLegibility;
  font-size: 2.25rem;
  line-height: 1.1;
}
/* ... */

